
2018-11-20 20:00 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * extgui.prg
    * eGUI_SetVar(), eGUI_GetVar() added
  * guiserver.prg
    * Sixth parameter, column length, added to SetColumn()

2018-11-19 20:00 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Added support for SetVar(), GetVar()

2018-11-09 13:18 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Added support for checking/enabling/disabling menu items

2018-11-13 14:38 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Few functions added to the EXTERNAL list

2018-11-08 14:30 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * extgui.prg
  * guiserver.prg
    * Menu id now is passed to the server,
      it is added as second parameter to eGUI_AddMenuItem()
    * Version number has been changed to 1.2.
  * tests/test1.prg
    * Changed calls of eGUI_AddMenuItem()

2018-11-08 11:52 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Support of tray (icon, menu) added

2018-11-07 14:00 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Support of context menus added
    * gVersion() extended

2018-11-05 18:50 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * extgui.prg
  * guiserver.prg
    * Logging now is of level 1 or 2.
    * Added support of syntax highlighting of a code editor.
  * tests/test.ini

2018-11-05 09:30 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * extgui.prg
  * guiserver.prg
    * Added support for the window icon.

2018-11-04 09:35 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Log extended: sent messages are saved there, too.
    * Added support for HCEdit class (code editor)
  * extgui.prg
    * Added support for HCEdit class (code editor) and MonthCalendar

2018-10-29 15:55 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Evaluating of some commands is deferred to the TimerFunc().
    * MonthCalendar control added to AddWidget()
