@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <part class="form">
   <style>
-    <property name="Geometry">{255,213,598,179}</property>
+    <property name="Geometry">{254,212,598,179}</property>
     <property name="Caption">[Example]</property>
     <property name="FormType">[Main]</property>
     <property name="lClipper">.F.</property>
@@ -34,22 +34,27 @@ cFormPath := hb_fnameDir(oForm:cFormName)
       <property name="atree">
         <item name="Test" id="32000">
           <item name="Test1" id="32001">
-            <![CDATA[HFormTmpl():Read( cFormPath + "testget2.xml" ):Show()]]>
+            <![CDATA[HFormTmpl():Read( cFormPath + "testget2.xml" ):Show()
+]]>
           </item>
           <item name="Proc call" id="32002">
-            <![CDATA[pGo("fmenu1",{Ltrim(Str(Seconds()))})]]>
+            <![CDATA[pGo("fmenu1",{Ltrim(Str(Seconds()))})
+]]>
           </item>
           <item name="Func call" id="32003">
-            <![CDATA[oLabel1:SetText( fGo("fmenu2") )]]>
+            <![CDATA[oLabel1:SetText( fGo("fmenu2") )
+]]>
           </item>
           <item name="-" id="32007"/>
           <item name="Exit" id="32006">
-            <![CDATA[hwg_EndWindow()]]>
+            <![CDATA[hwg_EndWindow()
+]]>
           </item>
         </item>
         <item name="Help" id="32004">
           <item name="About" id="32005">
-            <![CDATA[hwg_Shellabout("HwGUI forms example","")]]>
+            <![CDATA[hwg_Shellabout("HwGUI forms example","")
+]]>
           </item>
         </item>
       </property>
@@ -59,26 +64,41 @@ cFormPath := hb_fnameDir(oForm:cFormName)
     <style>
       <property name="Geometry">{0,0,710,48}</property>
       <property name="Name">[oToolbar1]</property>
+      <property name="Anchor">10</property>
+      <property name="hstyle">
+        <hstyle colors="{15790320,12763842}" orient="1"/>
+      </property>
     </style>
     <part class="ownerbutton">
       <style>
-        <property name="Geometry">{2,3,48,42}</property>
-        <property name="Caption">[Exit]</property>
+        <property name="Geometry">{2,3,75,42}</property>
+        <property name="Caption">[Test 1]</property>
         <property name="Flat">.T.</property>
+        <property name="styles">
+          <hstyle colors="{15790320,12763842}" orient="1"/>
+          <hstyle colors="{15790320}" orient="1" border="2" tcolor="0"/>
+          <hstyle colors="{15790320}" orient="1"/>
+        </property>
       </style>
       <method name="onClick">
-        <![CDATA[oDlg:Close()
+        <![CDATA[HFormTmpl():Read( cFormPath + "testget2.xml" ):Show()
 ]]>
       </method>
     </part>
     <part class="ownerbutton">
       <style>
-        <property name="Geometry">{51,3,75,42}</property>
-        <property name="Caption">[Test 1]</property>
+        <property name="Geometry">{548,3,48,42}</property>
+        <property name="Caption">[Exit]</property>
+        <property name="Anchor">8</property>
         <property name="Flat">.T.</property>
+        <property name="styles">
+          <hstyle colors="{15790320,12763842}" orient="1"/>
+          <hstyle colors="{15790320}" orient="1" border="2" tcolor="0"/>
+          <hstyle colors="{15790320}" orient="1"/>
+        </property>
       </style>
       <method name="onClick">
-        <![CDATA[HFormTmpl():Read( cFormPath + "testget2.xml" ):Show()
+        <![CDATA[oDlg:Close()
 ]]>
       </method>
     </part>
