@@ -1,4 +1,8 @@
 
+2018-11-21 20:00 UTC+0300 Alexander Kresin <alex@kresin.ru>
+  * tests/forms/example.xml
+    * xml form updated
+
 2018-11-20 20:00 UTC+0300 Alexander Kresin <alex@kresin.ru>
   * extgui.prg
     * eGUI_SetVar(), eGUI_GetVar() added
